<resources>
    <string name="app_name">MathSquare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome back!</string>
    <string name="wel">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="log_in">Log in</string>
    <string name="prompt_pref">Please Select Gamemode and Difficulty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="receive_firstname" />
    <string name="create_account">Create new account</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="diff_selection">Select Difficulty</string>
    <string name="select_gamemode">Select Gamemode</string>
    <string name="change_lang">Change language</string>
    <string name="settings">Settings</string>
    <string name="exit_game">Exit game</string>
    <string name="play_game">Play game</string>
    <string name="view_ranking">View ranking</string>
    <string name="game_over">GAMEOVER!</string>
    <string name="submit_score">Submit Score</string>
    <string name="exit">Exit</string>
    <string name="score">Score: </string>
    <string name="logout">Log out</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="total_score">"Total Score: "</string>
    <string name="personalinfo">Personal information</string>
    <string name="invalid_info">Invalid Information</string>
    <string name="name_blank">Display Name is Blank</string>
    <string name="wrong_email">Email is Incorrect</string>
    <string name="pw_6char">Password must contain at least 6 characters</string>
    <string name="wrong_cfpw">Confirmed password is incorrect</string>
    <string name="success_create">Successfully created User</string>
    <string name="fail_create">"Failed to create User</string>
    <string name="fill_email_pw">Please fill Email and Password</string>
    <string name="fail_login">"Failed to log in</string>
    <string name="success_login">Successfully logged in</string>
    <string name="success_ranking">Ranking Saved Successfully</string>
    <string name="fail_ranking">Failed to save Ranking</string>
    <string name="reset">Reset Score</string>
    <string name="tutorial">How To Play</string>
    <string name="full_tutorial">Tap the picture to see how to play!</string>
    <string name="record">Personal Record: </string>
    <string name="new_record">New Personal Record: </string>
    <string name="ranking">Ranking</string>
    <string name="bigbrain">BigBrain</string>
    <string name="mediumbrain">MediumBrain</string>
    <string name="smallbrain">SmallBrain</string>
</resources>
