<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/back_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/ic_back" />

    <TextView
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/ranking"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/gamemode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decimal_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/decimal"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/hex_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/hexadecimal"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ranking_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFFFF"
        android:paddingTop="10dp"
        tools:listitem="@layout/ranking_card" />

</LinearLayout>